--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,10 +1,10 @@
 server:
-  port: 3000
+  port: 8080
 
 db:
   type: 'postgres'
   port: 5432
-  database: 'yinstagram'
+  database: 'yongdev-market-backend'
 
 jwt:
   expiresIn: 3600
