--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-
+config
 # OS
 .DS_Store
 
@@ -35,4 +35,7 @@ lerna-debug.log*
 !.vscode/extensions.json
 
 
-/config
+default.yaml
+development.yaml
+production.yaml
+config/
